--- a/Módulo 3 - HTML 5/exemplos/tags.html
+++ b/Módulo 3 - HTML 5/exemplos/tags.html
@@ -10,7 +10,7 @@
     <h2> Título Menor </h2>
     <h5> Título Menor Ainda </h5>
 
-    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est quod reiciendis fugit placeat exercitationem. Odit dolorem quasi maiores repellat distinctio qui! Ab temporibus fugit beatae voluptatibus nesciunt sed, quibusdam sunt. </p>
+    <p> <strong> Lorem ipsum </strong> dolor <s> sit </s>, amet consectetur adipisicing elit. Est quod reiciendis fugit placeat exercitationem. Odit dolorem quasi maiores repellat distinctio qui! Ab temporibus fugit beatae voluptatibus nesciunt sed, quibusdam sunt. </p>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nesciunt ut alias ex veniam, explicabo itaque nemo iure quas cumque numquam amet laboriosam, doloremque expedita officia est, quasi magni dicta. </p>
 </body>
 </html>
