Exercício Final: Primeira Página

--- a/Módulo 3 - HTML 5/exemplos/exercicioFinalPageOne.html
+++ b/Módulo 3 - HTML 5/exemplos/exercicioFinalPageOne.html
@@ -5,5 +5,95 @@
         <title> SpaceX </title>
     </head>
     <body>
+        <header>
+            <div>
+                <nav>
+                    <a href="exercicioFinalPageOne.html">
+                        <img border="0" alt="SpaceX" src="../img/logo.png" width="200" height="50">
+                    </a>
+                    |
+                    <a href="exercicioFinalPageTwo.html">
+                      The Spaceships
+                    </a>
+                    |
+                    <a href="exercicioFinalPageThree.html">
+                        Hire Us
+                    </a>
+                </nav>
+            </div>
+            <hr>
+        </header>
+
+        <div>
+            <p>
+                <strong> Space Exploration Technologies Corp. </strong>
+            </p>
+
+            <p>
+                Proin nec vulputate diam, in blandit justo. Vestibulum ut risus vel augue iaculis gravida. Proin bibendum justo sem, a efficitur ligula sollicitudin et. 
+                Integer ultrices suscipit lacinia. Phasellus mauris ex, laoreet eu ex vel, CC. Cras at ligula nec arcu consequat dictum scelerisque 
+                non sapien. Mauris et est lectus. Ut vehicula, purus non aliquam congue, arcu urna efficitur velit, lobortis auctor enim erat vel diam.
+            </p>
+
+            <p>
+                Nunc augue velit, varius et erat sed, blandit finibus turpis. Aliquam tincidunt dapibus ex, sed pretium nibh lobortis vel. Aliquam quis orci non elit efficitur mattis. 
+                Nullam varius lectus diam, id varius risus imperdiet ornare. Sed malesuada nec magna eu euismod. Vivamus commodo quam sapien, at vehicula orci commodo ut. 
+                Etiam ac lacus sit amet metus euismod gravida nec sed nunc. Suspendisse eu ante quis elit rhoncus commodo a sit amet dolor. Fusce rhoncus imperdiet neque, eu vehicula mauris ultrices id. 
+                Donec dapibus mi at lorem iaculis, sit amet facilisis odio placerat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                Nam lobortis accumsan sapien nec viverra. Vestibulum blandit orci nec arcu imperdiet, vel mollis odio facilisis. Phasellus nec justo auctor, auctor est nec, tincidunt quam.
+            </p>
+
+            <p>
+                Nullam vel placerat purus, vitae tempor libero. Donec mauris ligula, iaculis sit amet ante a, tempor hendrerit lectus. Nunc cursus eget justo sagittis sollicitudin. 
+                Sed laoreet dapibus leo, quis varius ex pulvinar in. Maecenas ut orci id purus volutpat finibus sed at quam. Phasellus tempor eu mauris eu porttitor. 
+                Nunc sit amet risus nibh. Sed a sem vitae tellus accumsan vestibulum vitae a sapien. Nullam metus felis, finibus quis elit eu, luctus ornare mauris. 
+                Nam ut bibendum leo. Fusce justo quam, imperdiet non posuere non, elementum id urna. Fusce ut augue eget velit dapibus porttitor. Sed bibendum sem nibh, id finibus ligula ultrices sit amet. 
+                Vivamus est orci, mattis ut purus ac, posuere posuere eros. Nulla facilisi. Nam interdum lacus nec porttitor pellentesque.
+            </p>
+        </div>
+
+        <div>
+            <p> 
+                <strong> Our Services: </strong> 
+            </p>
+            
+            <ul>
+                <li> Phasellus mauris ex </li>
+                <li> laoreet eu ex vel </li>
+                <li> Mauris et est lectus </li>
+                <li> lobortis auctor enim erat vel diam </li>
+            </ul>
+        </div>
+
+        <div>
+            <table border="1">
+                <caption> <strong> Prices: </strong> </caption>
+                <thead>
+                    <tr>
+                        <th> Service </th>
+                        <th> Value </th>
+                    </tr>
+                </thead>
+                
+                <tbody>
+                    <tr>
+                        <td> Phasellus mauris ex </td>
+                        <td> $450 </td>
+                    </tr>
+                    <tr>
+                        <td>  laoreet eu ex vel </td>
+                        <td> $120 </td>
+                    </tr>
+                    <tr>
+                        <td> Mauris et est lectus </td>
+                        <td> $350 </td>
+                    </tr>
+                    <tr>
+                        <td> lobortis auctor enim erat vel diam </td>
+                        <td> $450 </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
