Exercício Final: Segunda Página

--- a/Módulo 3 - HTML 5/exemplos/exercicioFinalPageTwo.html
+++ b/Módulo 3 - HTML 5/exemplos/exercicioFinalPageTwo.html
@@ -5,5 +5,45 @@
         <title> SpaceX </title>
     </head>
     <body>
+        <header>
+            <div>
+                <nav>
+                    <a href="exercicioFinalPageOne.html">
+                        <img alt="SpaceX" src="../img/logo.png" width="200" height="50">
+                    </a>
+                    |
+                    <a href="exercicioFinalPageTwo.html">
+                        The Spaceships
+                    </a>
+                    |
+                    <a href="exercicioFinalPageThree.html">
+                        Hire Us
+                    </a>
+                </nav>
+            </div>
+            <hr>
+        </header>
+
+        <h2> Available Spaceships </h2> <br>
+
+        <div>
+            <h3> Falcon 9 </h3>
+            <img alt="Falcon 9" src="../img/falcon_9.jpg">
+            <p>
+                Falcon 9 is a reusable, two-stage rocket designed and manufactured by SpaceX for the reliable and safe transport of people and payloads into Earth orbit and beyond. 
+                Falcon 9 is the world’s first orbital class reusable rocket. Reusability allows SpaceX to refly the most expensive parts of the rocket, which in turn drives down the cost of space access. 
+            </p>
+            <hr>
+        </div>
+
+        <div>
+            <h3> Falcon Heavy </h3>
+            <img alt="Falcon Heavy" src="../img/falcon_heavy.jpg">
+            <p>
+                Falcon Heavy is the most powerful operational rocket in the world by a factor of two. With the ability to lift into orbit nearly 64 metric tons (141,000 lb) 
+                Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy. 
+                Falcon Heavy is composed of three Falcon 9 nine-engine cores whose 27 Merlin engines together generate more than 5 million pounds of thrust at liftoff, equal to approximately eighteen 747 aircraft.
+            </p>
+        </div>
     </body>
 </html>
