--- a/Módulo 3 - HTML 5/exemplos/exercicioFinalPageOne.html
+++ b/Módulo 3 - HTML 5/exemplos/exercicioFinalPageOne.html
@@ -5,24 +5,26 @@
         <title> SpaceX </title>
     </head>
     <body>
-        <header>
-            <div>
-                <nav>
-                    <a href="exercicioFinalPageOne.html">
-                        <img border="0" alt="SpaceX" src="../img/logo.png" width="200" height="50">
-                    </a>
-                    |
-                    <a href="exercicioFinalPageTwo.html">
-                      The Spaceships
-                    </a>
-                    |
-                    <a href="exercicioFinalPageThree.html">
-                        Hire Us
-                    </a>
-                </nav>
-            </div>
-            <hr>
-        </header>
+        <div>
+            <header>
+                <div>
+                    <nav>
+                        <a href="exercicioFinalPageOne.html">
+                            <img border="0" alt="SpaceX" src="../img/logo.png" width="200" height="50">
+                        </a>
+                        |
+                        <a href="exercicioFinalPageTwo.html">
+                            The Spaceships
+                        </a>
+                        |
+                        <a href="exercicioFinalPageThree.html">
+                            Hire Us
+                        </a>
+                    </nav>
+                </div>
+            </header>
+        </div>
+        <hr>
 
         <div>
             <p>
@@ -59,9 +61,9 @@
             
             <ul>
                 <li> Phasellus mauris ex </li>
-                <li> laoreet eu ex vel </li>
+                <li> Laoreet eu ex vel </li>
                 <li> Mauris et est lectus </li>
-                <li> lobortis auctor enim erat vel diam </li>
+                <li> Lobortis auctor enim erat vel diam </li>
             </ul>
         </div>
 
@@ -74,7 +76,7 @@
                         <th> Value </th>
                     </tr>
                 </thead>
-                
+
                 <tbody>
                     <tr>
                         <td> Phasellus mauris ex </td>
