Criando um Portfólio com Bulma - Parte II

--- a/Módulo 5 - Bulma/exercicios/portfolio.html
+++ b/Módulo 5 - Bulma/exercicios/portfolio.html
@@ -82,14 +82,75 @@
                   </header>
                   <div class="card-content">
                     <div class="content">
-                      Olá, me chamo Lucas Souza, sou desenvolvedor e estudante
-                      de Ciência da Computação na Universidade Federal do Ceará.
+                      <div class="columns">
+                        <div class="column">
+                          <figure class="image is-128x128">
+                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                          </figure>
+                        </div>
+                        <div class="column is-9">
+                          <p class="title is-5"> Javascript Developer <span class="tag is-dark"> Empresa X </span> </p>                   
+                            <p> Donec eget placerat enim, in maximus massa. Phasellus ac diam eu neque 
+                              fermentum dapibus. Maecenas vel rhoncus enim. In congue purus id ante 
+                              aliquet maximus. In aliquam libero volutpat nisi imperdiet pharetra. 
+                              Curabitur id odio elementum, semper dui sed, pellentesque justo. Integer et 
+                              mi id arcu laoreet aliquet. Quisque ultrices suscipit imperdiet. </p>
+                        </div>
+                      </div>
+                      
+                      <hr>
+
+                      <div class="columns">
+                        <div class="column">
+                          <figure class="image is-128x128">
+                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                          </figure>
+                        </div>
+                        <div class="column is-9">
+                          <p class="title is-5"> Javascript Developer <span class="tag is-dark"> Empresa X </span> </p>                   
+                            <p> Donec eget placerat enim, in maximus massa. Phasellus ac diam eu neque 
+                              fermentum dapibus. Maecenas vel rhoncus enim. In congue purus id ante 
+                              aliquet maximus. In aliquam libero volutpat nisi imperdiet pharetra. 
+                              Curabitur id odio elementum, semper dui sed, pellentesque justo. Integer et 
+                              mi id arcu laoreet aliquet. Quisque ultrices suscipit imperdiet. </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <br>
+
+                <div class="card">
+                  <header class="card-header">
+                    <p class="card-header-title">
+                      Formação
+                    </p>
+                  </header>
+                  <div class="card-content">
+                    <div class="content">
+                      <div>
+                        <p class="title is-5"> Javascript Full Stack em 8 Semanas </p>
+                        <p>
+                          Morbi elementum urna quam, id dictum odio venenatis quis. Ut nec est vitae 
+                          lectus consequat luctus vel id urna. Curabitur ut eleifend sem.
+                        </p>
+                      </div>
+                      <hr>
+                      <div>
+                        <p class="title is-5"> Java Developer </p>
+                        <p>
+                          Morbi elementum urna quam, id dictum odio venenatis quis. Ut nec est vitae 
+                          lectus consequat luctus vel id urna. Curabitur ut eleifend sem.
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
     </body>
 </html>
